apps/02-hello-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  labels:
    app: hello-web
spec:
  type: ClusterIP
  selector:
    app: hello-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
