apps/02-hello-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web
  labels:
    app: hello-web
spec:
  ingressClassName: nginx
  rules:
    - host: hello-web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
